<resources>
    <string name="app_name" translatable="false">Ung Dung Ban Van Phong Pham SP26</string>
    <string name="language">Language</string>
    <string name="next">Next</string>
    <string name="title_onb_1">Various keyboard styles</string>
    <string name="title_onb_2">15+ diverse fonts</string>
    <string name="title_onb_3">Explore Keyboard Themes</string>
    <string name="des_onb_1">des_onb_1</string>
    <string name="des_onb_2">des_onb_2</string>
    <string name="des_onb_3">des_onb_3</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_login_with">Or</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="you_already_have_an_account">You already have an account?</string>
    <string name="or_sign_up_with">Or Sign Up With</string>
    <string name="user_name">User name</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="view_purchase_history">View purchase history</string>
    <string name="order_pending_confirmation">Order pending confirmation</string>
    <string name="order_pending_pickup">Order pending pickup</string>
    <string name="order_pending_shipping">Order pending shipping</string>
    <string name="rating">Rating</string>
    <string name="my_gadget">My gadget</string>
    <string name="spending_statistics">Spending statistics</string>
    <string name="my_wallet">My wallet</string>
    <string name="coin_reward">Coin reward</string>
    <string name="vouchers">Vouchers</string>
    <string name="other_utilities">Other utilities</string>
    <string name="loyal_customers">Loyal customers</string>
    <string name="hunt_for_rewards">Hunt for rewards</string>
    <string name="liked">Liked</string>
    <string name="recently_viewed">Recently viewed</string>
    <string name="v_i_p">V.I.P</string>
    <string name="set_up_account">Set up account</string>
    <string name="change_account_or_log_out">Change Account / Log out</string>
    <string name="account_and_security">Password</string>
    <string name="address">Address</string>
    <string name="account_and_bank_card">Phone number</string>
    <string name="my_account">My Account</string>
    <string name="chat_setting">Chat Setting</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="setting">Setting</string>
    <string name="support_center">Support Center</string>
    <string name="community_standards">Community Standards</string>
    <string name="about_us">About Us</string>
    <string name="support">Support</string>
    <string name="msg_count_reviews">From 2000+ reviews</string>
    <string name="msg_welcome_login">Top brand, quality, number 1 reputation in the hearts of customers</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="msg_wrong">Something went wrong, please try again!</string>
    <string name="msg_input_null">Do not leave fields blank!</string>
    <string name="enter_your_password_confirmation">Enter your password again</string>
    <string name="msg_email_is_not_invalid">Please enter a valid email address</string>
    <string name="msg_password_least_8_char">Password must be at least 8 characters</string>
    <string name="msg_password_not_match">Authentication passwords do not match!</string>
    <string name="unknown">Unknown</string>
    <string name="buy_now">Buy now</string>
    <string name="product_description">Product description</string>
    <string name="product_reviews">Product reviews</string>
    <string name="see_all">See all</string>
    <string name="msg_added_to_cart">Added to cart</string>
    <string name="all">All</string>
    <string name="check_out">Check Out</string>
    <string name="select_voucher">Select Voucher</string>
    <string name="ok">OK</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="google_pay">Google Pay</string>
    <string name="zalo_pay">Zalo Pay</string>
    <string name="vn_pay">VN Pay</string>
    <string name="choose_method_payment">Choose method payment</string>
    <string name="_cart">%d cart</string>
    <string name="_order">%d order</string>
    <string name="favorite">Favorite</string>
    <string name="order_successful">Order successful!</string>
    <string name="purchased_orders">Purchased orders</string>
    <string name="to_pay">To Pay</string>
    <string name="to_receive">To Receive</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="total_">Total</string>
    <string name="items">items</string>
    <string name="item">item</string>
    <string name="expected_delivery_3_dec_4_dec">Expected delivery: 3 Dec - 4 Dec</string>
    <string name="review_ratings">Review Ratings</string>
    <string name="cancel">Cancel</string>
    <string name="review">Review</string>
    <string name="confirm">Confirm</string>
    <string name="carts">Carts</string>
    <string name="order">Order</string>
    <string name="are_you_satisfied_with_the_product">Are you satisfied with the product?</string>
    <string name="may_be_later">May be later</string>
    <string name="rate">Rate</string>
    <string name="thanks_for_rating">Thanks for rating!</string>
    <string name="payment">Payment</string>
    <string name="pay">Pay</string>
    <string name="payment_method">Payment method</string>
    <string name="message_for_the_store">Message for the store</string>
    <string name="type_message_here">Bank acc number - Bank name - Reason cancel</string>
    <string name="send">Send</string>
    <string name="update">Update</string>
    <string name="update_address">Update Address</string>
    <string name="update_phone">Update Phone Number</string>
    <string name="update_success">Update Success</string>
    <string name="r_u_want_to_cancel_your_order">Are you want to cancel your order?</string>
    <string name="msg_confirm_complete">Are you confirm to receive?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sold">Sold:</string>
    <string name="search">Search</string>
    <string name="payment_successful">Payment successful!</string>
    <string name="description_forgot_pass">Enter your email and get verification code to reset password</string>
    <string name="msg_email_not_exists">Email does not exist</string>
    <string name="reset_password">Reset password</string>
    <string name="code">Code</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="verification_code_already_sent_to_email">Verification code already sent to email</string>
    <string name="msg_error_network">No Internet Connection</string>
    <string name="maximum_discount">Maximum discount</string>
    <string name="quantity">Quantity</string>
    <string name="msg_input_quantity">Enter product quantity</string>
    <string name="msg_confirm_success">Confirm Success!</string>
    <string name="color_">Color: %s</string>
    <string name="msg_title_noti">Notification</string>
    <string name="msg_content_noti">Your order has been shipped, please keep an eye on your phone!</string>
    <string name="msg_ins_stock">Insufficient stock!</string>
    <string name="msg_support_financial">If your order has already been paid for, please contact the administrator for financial assistance!</string>
    <string name="msg_added_100_to_cart">Added 100 products to cart</string>
    <string name="select_customer_type">Select customer type</string>
    <string name="organization">Organization</string>
    <string name="personal">Personal</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="business_account">Business account</string>
    <string name="logout">Logout</string>
    <string name="information">Information</string>
    <string name="export">Export</string>
    <string name="products">Products</string>
    <string name="stock">Stock</string>
    <string name="invalid">Invalid!</string>
</resources>