<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_border_12sdp_2"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_10sdp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_for_the_store"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icClose"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="@id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bg_white_border_4sdp_stroke_primary"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/type_message_here"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:textColor="#232323"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_primary_border_4sdp"
            android:fontFamily="@font/inter_regular"
            android:gravity="center"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintTop_toBottomOf="@id/edtMessage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>