<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_border_top_8sdp"
        android:padding="@dimen/_12sdp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:paddingBottom="@dimen/_8sdp"
            android:text="@string/r_u_want_to_cancel_your_order"
            android:textColor="#232323"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewCenter"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/btnLater"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_border_4sdp_stroke_primary"
            android:fontFamily="@font/inter_regular"
            android:gravity="center"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/no"
            android:textColor="@color/primary"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toStartOf="@id/viewCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/viewCenter" />

        <TextView
            android:id="@+id/btnRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_gradient_primary_border_4sdp"
            android:fontFamily="@font/inter_regular"
            android:gravity="center"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/viewCenter"
            app:layout_constraintTop_toTopOf="@id/viewCenter" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>