<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/icBack"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_margin="@dimen/_16sdp"
            android:src="@drawable/ic_left_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvScreenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/sign_up"
            android:textColor="#323232"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="@id/icBack"
            app:layout_constraintStart_toEndOf="@id/icBack"
            app:layout_constraintTop_toTopOf="@id/icBack" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/json"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvScreenTitle"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/json_robot" />

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:background="@drawable/bg_white_border_12sdp"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/user_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_12sdp"
            android:singleLine="true"
            android:textColor="#323232"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@id/json" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bg_white_border_12sdp"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_12sdp"
            android:singleLine="true"
            android:textColor="#323232"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@id/edtUserName" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bg_white_border_12sdp"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_12sdp"
            android:singleLine="true"
            android:textColor="#323232"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@id/edtEmail" />

        <TextView
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_primary_gradient_border_12sdp"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:paddingVertical="@dimen/_12sdp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

        <TextView
            android:id="@+id/tvLoginWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/or_sign_up_with"
            android:textColor="#323232"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

        <ImageView
            android:id="@+id/imgFb"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/img_fb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLoginWith" />

        <ImageView
            android:id="@+id/imgIg"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:src="@drawable/img_ig"
            app:layout_constraintEnd_toStartOf="@id/imgFb"
            app:layout_constraintTop_toBottomOf="@id/tvLoginWith" />

        <ImageView
            android:id="@+id/imgTele"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/img_tele"
            app:layout_constraintStart_toEndOf="@id/imgFb"
            app:layout_constraintTop_toBottomOf="@id/tvLoginWith" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4sdp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/you_already_have_an_account"
                android:textColor="#323232"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/sign_in"
                android:textColor="#323232"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>